
    \item \code{hhh4()} now has support for \code{lag!=1} in the
    autoregressive and neighbor-driven components. The applied lags are
    stored as component \code{"lags"} of the return value (previously
    there was an unused component \code{"lag"} which was always 1 and
    has been removed now).
    
    \item \code{oneStepAhead()}:
    \itemize{
      \item New argument \code{type} with a new \code{type}
      \code{"first"} to base all subsequent one-step-ahead predictions
      on a single initial fit. 
      \item Nicer interpretation of \code{verbose} levels, and
      \code{txtProgressBar()}. 
    }

    \item New \code{data("measlesWeserEms")}, a corrected version of
    \code{data("measles.weser")}.

    \item The \code{plot()}-method for fitted \code{hhh4()} objects now
    offers two additional types of plots: component seasonality and maps
    of estimated random intercepts. It is documented and more customizable.
    Note that argument order and some names have changed:
    \code{i} -> \code{units}, \code{title} -> \code{names}.

    \item (Deviance) \code{residuals()}-method for fitted \code{hhh4()}
    models.

    \item New predefined spatial interaction functions for \code{twinstim()}:
    \code{siaf.student()} implements a \eqn{t}-kernel, and
    \code{siaf.step()} a step function.

    \item New predefined temporal interaction function for \code{twinstim()}:
    \code{tiaf.step()} implements a step function.

    \item Numerical integration over polygonal domains in the \code{F}
    and \code{Deriv} components of \code{siaf.powerlaw()} and
    \code{siaf.powerlawL()} is much faster and more accurate now since
    we use \code{polyCub.iso()} instead of \code{polyCub.SV()}.

    \item Inference for neighbourhood weights in \code{hhh4()} models:
    \code{W.powerlaw()} and \code{W.np()} both implement weights
    depending on the order of neighbourhood between regions, a power-law